Implement Retrieval of plans, QPIs, and metrics
- All specs can be listed
- All specs can be individually retrieved
- API can be installed alongside qtip
- API can be hosted using command `qtip-api`

JIRA: QTIP-221
JIRA: QTIP-222
